[package]
name = "lochan"
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/al8n/lochan"
homepage = "https://github.com/al8n/lochan"
documentation = "https://docs.rs/lochan"
description = "Single-threaded (!Send), no_std, no-atomics async channels for thread-per-core runtimes: mpsc, mpmc, and oneshot, with non-blocking (try_*) and awaitable APIs."
license = "MIT OR Apache-2.0"
keywords = ["channel", "mpsc", "oneshot", "async", "no-std"]
categories = ["asynchronous", "concurrency", "no-std", "data-structures"]

[[bench]]
path = "benches/channels.rs"
name = "channels"
harness = false

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
futures-core = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = "0.8"
futures = { version = "0.3", features = ["executor"] }
local-channel = "0.1"
local-sync = "0.1"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
